# lib/db/src/schema/index.ts
@@ -18,3 +18,5 @@
 //   export type Post = typeof postsTable.$inferSelect;
 
 export * from "./contacts";
+export * from "./conversations";
+export * from "./messages";
